--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,16 +17,17 @@ services:
     stdin_open: true
     image: node:13.2.0
     container_name: 'fvmc_dev_client'
-    command: ["/src/client/dev-nuxt.sh"]
+    command: ["sh","/src/client/dev-nuxt.sh"]
     volumes:
       - .:/src
       - node_modules:/src/client/node_modules
     ports:
-      - 3000:3000
+      - 3013:3013
+    
     depends_on:
       - server
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+    # environment:
+    #   - CHOKIDAR_USEPOLLING=true
 
   mongodb:
     image: mongo:latest
