--- a/client/package.json
+++ b/client/package.json
@@ -9,19 +9,29 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.4.3",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
     "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.21.2"
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.4.3",
+    "phylotree": "1.0.0",
+    "scribl": "file:./src/Scribl",
+    "underscore": "^1.13.1",
+    "vue": "^2.6.10",
+    "vue-burger-menu": "^2.0.5",
+    "vue-phylogram": "^2.1.2",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "phylocanvas": "^2.8.1",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
