Avoid NCBITaxa db update at each new file insertion

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,4 +16,7 @@ RUN python -m pip install -r requirements.txt
 
 COPY . .
 
+ENV TAXDUMP_FILE="./services/taxdump.tar.gz"
+RUN python -c "from ete3 import NCBITaxa; NCBITaxa(taxdump_file='${TAXDUMP_FILE}')"
+
 CMD ["flask", "run", "--host=0.0.0.0", "--port=8000"]
