--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,31 +3,60 @@ version: '3'
 services:
   server:
     build: ./server
-    container_name: 'fvmc_dev_server'
+    container_name: 'server'
+    restart: always
+    environment: 
+      - APP_NAME=GeneId
     expose:
-      - "8000"
-    ports:
-      - "8000:8000"
+      - "8080"
+    # ports:
+    #   - "8000:8000"
     volumes:
       - ./server:/server
     env_file: 
       - .env
 
-  frontend:
-    stdin_open: true
-    image: node:13.2.0
-    container_name: 'fvmc_dev_client'
-    command: ["sh","/src/client/dev-nuxt.sh"]
-    volumes:
-      - .:/src
-      - node_modules:/src/client/node_modules
+  nginx:
+    build: ./client
+    container_name:  nginx
+    restart: always
+    #  port allows the host machine to link to container
+    # pass 80 from host machine to 80 of the image filesystem
     ports:
-      - 3013:3013
+        - "80:80"
+
+  # frontend:
+  #   build: ./client
+  #   container_name:  fvmc_dev_client
+  #   restart: always
+  #   #  mount the volumes so we can change code and hot reload
+  #   volumes:
+  #       - './client:/client'
+  #   #  port allows the host machine to link to container
+  #   #  8000 for vue ui, 5000 for our vue app
+  #   ports:
+  #     - "8000:8000"
+  #     - "8080:8080"
+  #   expose:
+  #     - "8080"
+
+  #   depends_on:
+  #       - server
+  # frontend:
+  #   stdin_open: true
+  #   image: node:13.2.0
+  #   container_name: 'fvmc_dev_client'
+  #   command: ["sh","/src/client/dev-nuxt.sh"]
+  #   volumes:
+  #     - .:/src
+  #     - node_modules:/src/client/node_modules
+  #   ports:
+  #     - 3013:3013
     
-    depends_on:
-      - server
-    # environment:
-    #   - CHOKIDAR_USEPOLLING=true
+  #   depends_on:
+  #     - server
+  #   # environment:
+  #   #   - CHOKIDAR_USEPOLLING=true
 
   mongodb:
     image: mongo:latest
@@ -46,5 +75,4 @@ services:
 volumes:
   app:
   mongodb-data:
-  node_modules:
 
