--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -13,4 +13,8 @@ server {
         uwsgi_pass server:8080;
         client_max_body_size 1000M;
     }
+
+    # location /tmp/ {
+    #         root /tmp;
+    #     }
 }
