--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,5 @@
 FROM guigolab/geneid:1.2 as geneid
 
-
 FROM python:3.6-stretch
 
 WORKDIR /soft
@@ -15,7 +14,13 @@ WORKDIR /server
 
 ADD . /server
 
-# RUN python -m pip install --upgrade pip
+RUN apt-get update -y
+RUN apt-get -y install gawk;
+
+RUN python -m pip install --upgrade pip
+
+RUN apt-get install -y ghostscript libgs-dev
+RUN apt-get install -y libmagickwand-dev imagemagick --fix-missing
 
 RUN pip install -r ./server/requirements.txt
 
