--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@
 
 -i https://pypi.org/simple
 aniso8601==9.0.1
+apscheduler==3.7.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 bcbio-gff==0.6.6
 biopython==1.79
 bioseq==0.2.3
@@ -14,11 +15,13 @@ click==8.0.1; python_version >= '3.6'
 dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.3
 ete3==3.1.2
+flask-apscheduler==1.12.2
 flask-cors==3.0.10
 flask-mongoengine==1.0.0
 flask-restful==0.3.8
 flask-wtf==0.15.1; python_version >= '3.6'
 flask==1.1.2
+gunicorn==19.9.0
 idna==3.2; python_version >= '3.5'
 itsdangerous==2.0.1; python_version >= '3.6'
 jinja2==3.0.1; python_version >= '3.6'
@@ -26,8 +29,10 @@ markupsafe==2.0.1; python_version >= '3.6'
 mongoengine==0.23.1; python_version >= '3.6'
 numpy==1.18.0
 pymongo==3.12.0
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tzlocal==2.1
 uwsgi==2.0.19.1
 werkzeug==2.0.1; python_version >= '3.6'
 wtforms[email]==2.3.3
