--- a/client/default.conf.template
+++ b/client/default.conf.template
@@ -10,11 +10,7 @@ server {
 
     location /api {
         include uwsgi_params;
-        uwsgi_pass server:8080;
+        uwsgi_pass ${API_HOST}:${API_PORT};
         client_max_body_size 1000M;
     }
-
-    # location /tmp/ {
-    #         root /tmp;
-    #     }
 }
