--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,16 +6,13 @@ name = "pypi"
 [packages]
 gunicorn = "==19.9.0"
 flask-mongoengine = "==1.0.0"
-ete3 = "==3.1.2"
-numpy = "==1.18.0"
-biopython = "==1.79"
-bcbio-gff = "==0.6.6"
-bioseq = "==0.2.3"
 Flask = "==1.1.2"
 Flask-RESTful = "==0.3.8"
 Flask-Cors = "==3.0.10"
 uwsgi = "*"
 flask-apscheduler = "*"
+lxml = "*"
+requests = "*"
 
 [dev-packages]
 
