--- a/client/default.conf.template
+++ b/client/default.conf.template
@@ -6,11 +6,13 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
         client_max_body_size 1000M;
+
     }
 
     location /api {
         include uwsgi_params;
         uwsgi_pass ${API_HOST}:${API_PORT};
         client_max_body_size 1000M;
+        uwsgi_read_timeout 300;
     }
 }
