WIP reformat geneid app

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -27,6 +27,10 @@ services:
       - ./tmp:/tmp
     ports:
         - "80:80"
+    environment:
+        - API_HOST=server
+        - API_PORT=8080
+
         
   mongodb:
     image: mongo:latest
