--- a/.env
+++ b/.env
@@ -8,3 +8,17 @@ DB_USER=root
 DB_PASS=root
 DB_HOST=mongodb
 DB_PORT=27017
+
+
+# API KEY (Used for CUD operations)
+USER=admin
+#change this in production!!
+JWT_SECRET_KEY=secret_restKey 
+#change this in production!!
+RESTKEY=secretPassword
+
+
+
+# DATA PORTAL
+MAX_NODES=90
+RANKS=superkingdom,kingdom,phylum,subphylum,superclass,class,subclass,superorder,order,family,subfamily,genus,species,subspecies
