--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,12 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.4.3",
     "d3": "^7.0.0",
     "igv": "^2.9.2",
-    "underscore": "^1.13.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.5.4"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -52,4 +51,3 @@
     "last 2 versions"
   ]
 }
- 
