--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.3",
+    "@jbrowse/react-linear-genome-view": "^1.6.7",
     "axios": "^0.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "d3": "^7.0.0",
     "igv": "^2.9.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuera": "^0.2.7",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
