--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,7 +5,7 @@ services:
     build: 
       context: .
       dockerfile: ./server/Dockerfile
-    container_name: 'server'
+    container_name: 'geneid-server'
     restart: always
     environment: 
       - APP_NAME=GeneId
@@ -19,7 +19,7 @@ services:
 
   nginx:
     build: ./client
-    container_name:  nginx
+    container_name: 'geneid-nginx'
     restart: always
     volumes:
       - ./client:/client
@@ -34,7 +34,7 @@ services:
         
   mongodb:
     image: mongo:latest
-    container_name: "fvmc_db"
+    container_name: "geneid-mongo"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
