--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -27,6 +27,7 @@ jinja2==3.0.3; python_version >= '3.6'
 lxml==4.8.0
 markupsafe==2.1.0; python_version >= '3.7'
 mongoengine==0.24.0; python_version >= '3.6'
+pyfaidx==0.6.4
 pyjwt==2.3.0; python_version >= '3.6'
 pymongo==4.0; python_version >= '3.6'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
