--- a/client/default.conf.template
+++ b/client/default.conf.template
@@ -1,11 +1,15 @@
-
 server {
+    
     listen 80;
 
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
 
+    }
+
+    location /files/ {
+        alias /var/www/statics/;
     }
 
     location /api {
