add comment on env variables

--- a/.env
+++ b/.env
@@ -10,8 +10,7 @@ DB_HOST=mongodb
 DB_PORT=27017
 
 
-# API KEY (Used for CUD operations)
-USER=admin
+# API KEY (change this in production)
 API_KEY=SuP3R_S3Cr3t_K3Y
 
 
@@ -19,4 +18,3 @@ API_KEY=SuP3R_S3Cr3t_K3Y
 
 # DATA PORTAL
 MAX_NODES=120
-RANKS=superkingdom,kingdom,phylum,subphylum,superclass,class,subclass,superorder,order,family,subfamily,genus,species,subspecies
